WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56612
Web page shouldn't swallow alt-key combinations on Windows
https://bugs.webkit.org/show_bug.cgi?id=56612
Summary
Web page shouldn't swallow alt-key combinations on Windows
Jeff Miller
Reported
2011-03-17 17:01:03 PDT
With the exception of Alt+Left Arrow and Alt+Right arrow to go back and forward (which seems to be a standard convention on Windows), web pages shouldn't swallow alt-key combinations, these should bubble up to the client.
Attachments
Patch
(2.97 KB, patch)
2011-03-17 17:05 PDT
,
Jeff Miller
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeff Miller
Comment 1
2011-03-17 17:05:05 PDT
Created
attachment 86118
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-03-17 17:09:17 PDT
Comment on
attachment 86118
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=86118&action=review
What about Control-key combinations?
> Source/WebKit2/ChangeLog:9 > + sure any alt-key combinations bubble up to the client.
I think you mean "any other alt-key combinations".
Jeff Miller
Comment 3
2011-03-17 17:10:52 PDT
(In reply to
comment #2
)
> (From update of
attachment 86118
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=86118&action=review
> > What about Control-key combinations? > > > Source/WebKit2/ChangeLog:9 > > + sure any alt-key combinations bubble up to the client. > > I think you mean "any other alt-key combinations".
Yes I did, thanks.
Jeff Miller
Comment 4
2011-03-17 17:11:56 PDT
Committed
r81416
: <
http://trac.webkit.org/changeset/81416
>
Adam Roben (:aroben)
Comment 5
2011-03-17 17:12:33 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (From update of
attachment 86118
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=86118&action=review
> > > > What about Control-key combinations?
So what's the answer to this?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug