2011-03-17  Jeff Miller  <jeffm@apple.com>

Reviewed by Adam Roben.

        Web page shouldn't swallow alt-key combinations on Windows
        https://bugs.webkit.org/show_bug.cgi?id=56612

        Make Alt+Left Arrow and Alt+Right Arrow go back and forward, but make
        sure any alt-key combinations bubble up to the client.

        * WebProcess/WebPage/win/WebPageWin.cpp:
        (WebKit::WebPage::performDefaultBehaviorForKeyEvent): Make Alt+Left Arrow and Alt+Right Arrow go back and forward, ignore any other alt-key combinations.


Canonical link: https://commits.webkit.org/71288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81416 268f45cc-cd09-0410-ab3c-d52691b4dbfc